--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,20 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+            <!-- we need a test/demo API key and secret before being able to enable this -->
+            <!--<plugin>-->
+              <!--<groupId>org.apache.maven.plugins</groupId>-->
+              <!--<artifactId>maven-surefire-plugin</artifactId>-->
+              <!--<version>2.10</version>-->
+              <!--<configuration>-->
+                <!--<includes>-->
+                  <!--<include>**/*Tests.java</include>-->
+                <!--</includes>-->
+                <!--<argLine>-Xmx1024m</argLine>-->
+                <!--<parallel>both</parallel>-->
+              <!--</configuration>-->
+            <!--</plugin>-->
+
         </plugins>
     </build>
 
