--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,22 @@
     </dependencies>
 
     <build>
+   		<resources>
+   		  <resource>
+   		    <directory>src</directory>
+   		    <filtering>true</filtering>
+   		    <includes>
+   		      <include>**/*.properties</include>
+   		    </includes>
+   		  </resource>
+   		  <resource>
+   		    <directory>src/main/resources</directory>
+   		    <filtering>false</filtering>
+   		    <excludes>
+   		      <exclude>**/*.properties</exclude>
+   		    </excludes>
+   		  </resource>
+   		</resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
