[maven-release-plugin] prepare release stackmob-java-client-sdk-0.3.4

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.stackmob</groupId>
     <artifactId>stackmob-java-client-sdk</artifactId>
-    <version>0.3.4-SNAPSHOT</version>
+    <version>0.3.4</version>
     <packaging>jar</packaging>
     <name>Stackmob Java SDK</name>
     <description>The Stackmob Java SDK.</description>
@@ -157,6 +157,7 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+			<!--
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
@@ -169,7 +170,7 @@
                 <parallel>both</parallel>
               </configuration>
             </plugin>
-
+-->
         </plugins>
     </build>
 
